--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@editorjs/editorjs": "^2.30.6",
     "@reduxjs/toolkit": "^2.2.7",
     "firebase": "^10.14.0",
     "flowbite-react": "^0.10.1",
