--- a/client/package.json
+++ b/client/package.json
@@ -10,8 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-react": "^9.3.0",
     "@editorjs/editorjs": "^2.30.6",
     "@reduxjs/toolkit": "^2.2.7",
+    "ckeditor5": "^43.2.0",
     "firebase": "^10.14.0",
     "flowbite-react": "^0.10.1",
     "react": "^18.3.1",
